Thu Oct  5 18:24:02 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test of QuartzBufferedTable (fails).

Thu Oct  5 18:01:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Corrected includes of autoptr.h in quartz files.

Thu Oct  5 17:51:01 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made QuartzTable into a base class for QuartzDiskTable and
	  QuartzBufferedTable.

	* Made QuartzTableManager into a base class for QuartzDiskTableManager
	  and QuartzBufferedTableManager.

	* Removed QuartzModifications object.  We now use
	  QuartzBufferedTables to hold changes before committing instead. 

	* QuartzDatabase has a QuartzTableManager object, which is actually
	  a QuartzBufferedTableManager if the database is writable.
	  Separate pointer held to access the manager as a buffered manager
	  in this case.  This means that updates to the database will
	  immediately be accessible from the same quartz database object
	  (so searches while indexing will search across all the unflushed
	  changes too).

Thu Oct 05 16:51:09 BST 2000 Olly Betts

	* get_weight() moved into LeafPostList instead of subclasses and now
	  only fetches document length if it needs it.

	* irweight.cc: added missing licence.

	* IRWeight: now possible to register user weight objects (not yet
	  externally visible).
 
Thu Oct  5 16:43:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added omindexer.cc

Thu Oct  5 15:57:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed some #includes.

Thu Oct  5 14:32:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Split indexer interface into several header files in include/om.

	* Hid the internal details in Internal objects.

	* Moved autoptr.h into include/om as AutoPtr is in the indexing
	  interface.

Thu Oct 05 13:30:49 BST 2000 Olly Betts

	* OmPostListIterator: added get_doclength() and get_wdf() methods;